--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py37_0
   - expat=2.2.6=h0a44026_0
+  - freetype=2.9.1=hb4e5f40_0
   - gettext=0.19.8.1=h15daf44_3
   - glib=2.56.2=hd9629dc_0
   - icu=58.2=h4b95b61_1
@@ -30,6 +31,7 @@ dependencies:
   - jupyter_client=5.2.4=py37_0
   - jupyter_console=6.0.0=py37_0
   - jupyter_core=4.4.0=py37_0
+  - kiwisolver=1.1.0=py37h0a44026_0
   - libcxx=4.0.1=hcfea43d_1
   - libcxxabi=4.0.1=hcfea43d_1
   - libedit=3.1.20181209=hb402a30_0
@@ -39,6 +41,7 @@ dependencies:
   - libpng=1.6.37=ha441bb4_0
   - libsodium=1.0.16=h3efe00b_0
   - markupsafe=1.1.1=py37h1de35cc_0
+  - matplotlib=3.0.3=py37h54f8f79_0
   - mistune=0.8.4=py37h1de35cc_0
   - mkl=2019.3=199
   - mkl_fft=1.0.12=py37h5e564d8_0
@@ -62,6 +65,7 @@ dependencies:
   - prompt_toolkit=2.0.9=py37_0
   - ptyprocess=0.6.0=py37_0
   - pygments=2.3.1=py37_0
+  - pyparsing=2.4.0=py_0
   - pyqt=5.9.2=py37h655552a_2
   - pyrsistent=0.14.11=py37h1de35cc_0
   - python=3.7.3=h359304d_0
@@ -88,5 +92,7 @@ dependencies:
   - xz=5.2.4=h1de35cc_4
   - zeromq=4.3.1=h0a44026_3
   - zlib=1.2.11=h1de35cc_3
+  - pip:
+    - cycler==0.10.0
 prefix: /Users/andrewrice/anaconda3/envs/datascience
 
